--- a/index.html
+++ b/index.html
@@ -21,33 +21,50 @@
 
 <body>
     <header class="">
-        <div class="overlay h-100 pb-4">
-            <nav class="d-flex justify-content-around align-items-center py-1">
-                <div class="logo d-flex justify-content-center align-items-center">
+        <div class="overlay">
+            <nav class="navbar navbar-expand-lg  navbar-light bg-light">
+                <div class="logo d-flex justify-content-center align-items-center pl-5">
                     <img src="assets/images/logo.png" alt="stategic Management experts">
                     <span class="px-2 m-0 "> Stategic
                         Management
                         Experts
                     </span>
                 </div>
-                <ul class="list-inline d-flex justify-content-around align-items-center pt-3">
-                    <li class="list-inline-item  active-link rounded-pill px-3"><a href="">HOME</a></li>
-                    <li class="list-inline-item px-2"><a href="">SERVICES</a></li>
-                    <li class="list-inline-item px-2"><a href="">OUR TEAM</a></li>
-                    <li class="list-inline-item px-2"><a href="">RESOURCES</a></li>
-                    <li class="list-inline-item px-2"><a href="">CONTACT US</a></li>
-                </ul>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link active-link rounded-pill  font-weight-bolder" href="#">Home <span
+                                    class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  font-weight-bold" href="#">SERVICES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  font-weight-bold" href="#">OUR TEAM</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  font-weight-bold" href="#">RESOURCES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link  font-weight-bold" href="#">CONTACT US</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
             <h1 class="text-center m-0">
                 <div class="header-overlay py-4 text-white">
                     Try not to become a man of success.<br>
-                    Rather become a <span class="color-orange">man of vlue</span>
+                    Rather become a <span class="color-orange">man of value</span>
                 </div>
             </h1>
-            <div class="container pb-5 my-5 py-3">
-                <div class="row services-containers mt-5">
-                    <div class="col-md-4">
-                        <div class="service-container py-5 text-center position-relative px-3">
+            <div class="container py-5 my-5">
+                <div class="row services-containers my-5">
+                    <div class="col-md-4 col-sm-12">
+                        <div class="service-container py-5 text-center position-relative px-3 my-5">
                             <img src="assets/images/icon1.png" alt="about us">
                             <h2 class="my-3">About Us</h2>
                             <p>
@@ -60,8 +77,8 @@
                             <button class="btn rounded-pill read-more-btn">READ MORE</button>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="service-container py-5 text-center position-relative px-3">
+                    <div class="col-md-4 col-sm-12">
+                        <div class="service-container py-5 text-center position-relative px-3 my-5">
                             <img src="assets/images/icon2.png" alt="vision">
                             <h2 class="my-3">Our Vision</h2>
                             <p>
@@ -74,8 +91,8 @@
                             <button class="btn rounded-pill read-more-btn">READ MORE</button>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="service-container py-5 text-center position-relative px-3">
+                    <div class="col-md-4 col-sm-12">
+                        <div class="service-container py-5 text-center position-relative px-3 my-5">
                             <img src="assets/images/icon3.png" alt="values">
                             <h2 class="my-3">Our Values</h2>
                             <p>
